redo relationships of (item, itempermission) (list, list permission) (list, item)